# sfasta

./: .gitignore  .gitmodules  CAVEATS.md  CHANGELOG.md  Cargo.toml  FORMAT.md  LICENSE  NOTES.md  README.md  TESTING_NOTES.md  TODO.md  WINDOWS.md  bench.csv  bench.md  bench.sh  bench_sizes.txt  callgrind.out.1574226  changelog.rss  fast_convert_to_int.md  index.html  massif.out.357028  massif.out.357918  massif.out.360252  merged.profdata  nt_compression.md  oranda.json  pgo_build.bash  pgo_compile.bash  pgo_compile.sh  pgo_generate_compile.sh  rustfmt.toml
.circleci/: config.yml
.config/: cargo.toml
.github/workflows/: ci.yml  web.yml
.scripts/: grcov.bash
bench_scripts/: bench_illumina_compression.sh  bench_nt_compression.sh  bench_uniprot_access.sh
benches/: dual_level_index.rs  ml32bit.rs
book/: 404.html  Makefile  book.toml  file_format.html  index.html  print.html  searchindex.js  searchindex.json
book/src/: SUMMARY.md  block_index.md  blocks.md  datatypes.md  file_format.md
book/src/datatypes/: compressed_blocks.md
book/src/structs/: compressed_blocks.md  directory.md  metadata.md  parameters.md
bptree/: Cargo.toml  cargo.toml
bptree/benches/: tree.rs
bptree/src/: bplustree.rs  eytzinger.rs  fractal.rs  lib.rs  ordsearch.rs  sorted_vec.rs
bulk_load_bplus_tree/: Cargo.toml
bulk_load_bplus_tree/src/: conversion.rs  disk.rs  lib.rs  sequential.rs
changelog/: index.html
compression/: Cargo.toml
compression/src/: lib.rs  rans_impl.rs  stream_based.rs
compression/src/dict/: mod.rs  zstd_dict.rs
compression_profiles/: default.yaml  fast.yaml  fastest.yaml  small.yaml  smallest.yaml
filehandlemanager/: Cargo.toml
filehandlemanager/src/: lib.rs
fractaltree/: Cargo.toml
fractaltree/benches/: integer_compression.rs  tree.rs
fractaltree/benches/data/: fastq_scores_illumina.txt
fractaltree/src/: build.rs  conversion.rs  disk.rs  disk_async.rs  fractal.rs  lib.rs  read.rs
htscodecs-sys/: Cargo.toml  build.rs  htscodecs.h
htscodecs-sys/include/: config.h
htscodecs-sys/src/: bindings.rs  lib.rs
libsfasta/: Cargo.toml  llvm-cov-show.sh
libsfasta/benches/: compression.rs  compresssion_stream_buffer.rs  conversion.rs  dual_level_index.rs  indexing.rs  ml32bit.rs  seq_loc.rs
libsfasta/fuzz/: Cargo.toml
libsfasta/fuzz/corpus/parse_fasta/: test_sequence.fasta
libsfasta/fuzz/corpus/parse_fastq/: test.fastq  test1.fastq  test2.fastq
libsfasta/fuzz/fuzz_targets/: fuzz_target_1.rs  parse_fasta.rs  parse_fastq.rs  parse_sfasta.rs
libsfasta/src/: __index.rs  _compression_stream_buffer.rs  compression_stream_buffer.rs  convenience.rs  conversion.rs  conversions.rs  dict.rs  directory.rs  fasta.rs  fastq.rs  format.md  format.rs  format2.rs  index.rs  index_directory.rs  index_generator.rs  io.rs  lib.rs  metadata.rs  parameters.rs  prelude.rs  seqloc_block.rs  sequence_block.rs  sequence_buffer.rs  structs.rs  types.rs  utils.rs
libsfasta/src/block_index/: mod.rs
libsfasta/src/bplustree/: mod.rs
libsfasta/src/compression/: README.md  cute_nucleotides_2bit.rs  cute_nucleotides_4bit.rs  cute_nucleotides_LICENSE  mod.rs  naf_like.rs  useful.rs  worker.rs
libsfasta/src/data_types/: directory.rs  header.rs  id.rs  index_directory.rs  masking.rs  mod.rs  parameters.rs  seq_loc.rs  sequence_block.rs  structs.rs
libsfasta/src/datastructures/: btree.rs
libsfasta/src/datatypes/: _previous_sequence_block.rs  bytes_block_store.rs  compression_profile.rs  coordinator.rs  directory.rs  header.rs  id.rs  index_directory.rs  masking.rs  masking.rs.orig  mod.rs  parameters.rs  seq_loc copy.rs  seq_loc.rs  sequence_block.rs  sequence_block_store.rs  string_block_store.rs  structs.rs  u64_block_store.rs
libsfasta/src/datatypes/simple/: directory.rs  metadata.rs  mod.rs  parameters.rs
libsfasta/src/datatypes/stores/: bytes_block_store.rs  masking.rs  mod.rs  string_block_store.rs  threads.rs
libsfasta/src/dual_level_index/: dual_index.rs  mod.rs
libsfasta/src/format/: directory.rs  dual_index.rs  format.rs  mod.rs  sfasta.rs
libsfasta/src/formats/: fasta.rs  fastq.rs  mod.rs  sfasta.rs  utils.rs
libsfasta/src/io/: mod.rs  worker.rs
libsfasta/src/masking/: ml32bit.rs  mod.rs  processor.rs
libsfasta/src/parser/: async_parser.rs  mod.rs  std.rs
libsfasta/test_data/: Erow_sample.fasta  test_convert.fasta  test_sequence_conversion.fasta
preload/: Cargo.toml
preload/src/: lib.rs
pysfasta/: Cargo.toml  pyproject.toml  todo.md
pysfasta/src/: lib.rs
pysfasta/testing/: pysfasta.ipynb
sfa/: Cargo.toml
sfa/src/: cli.yaml  faidx_all.rs  main.rs
test_data/: test_sequence_conversion.fasta
