[workspace]
members = [
    "./libsfasta",
    "./sfa",
]

# This is magic
# [profile.dev.package."*"]
# opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
# panic = "abort"
codegen-units = 1
# debug = true

[profile.dev]
# opt-level = 3 # Memory allocation is too slow otherwise...
debug = true
# lto = true
