[package]
name = "bulk_load_bplus_tree"
version = "0.0.1"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fractal Tree for libsfasta"
repository = "https://github.com/jguhlin/sfasta"

[lib]
crate-type = ["rlib", "cdylib"]
name = "libbulk_load_bplus_tree"
path = "src/lib.rs"

# [[bench]]
# name = "tree"
# harness = false

# [[bench]]
# name ="integer_compression"
# harness = false

[dependencies]
pulp = "0.21"
bumpalo = {version = "3.15.4", features = ["boxed", "collections"]}
sorted-vec = "0.8.3"
bincode = "2.0.1"
compression = { path = "../compression" }
binout = "0.3"
log = "0.4"
rayon = "1.10.0"
num = { version = "0.4.1", features = ["alloc", "libm"] }
zstd = { version="0.13", default-features = false, features=["arrays", "zdict_builder", "experimental"] }
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
human-size = "0.4.3"
bitpacking = "0.9.2"
wide = "0.7.16"
pco = "0.4.1"
stream-vbyte = "0.4.1"
