[package]
name = "compression"
version = "0.0.1"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Compression functions for libsfasta, sfa, and FractalTree"
repository = "https://github.com/jguhlin/sfasta"

[lib]
crate-type = ["rlib", "cdylib"]
name = "libcompression"
path = "src/lib.rs"

[dependencies]
bincode = { version = "2.0.0-rc.3" } #, features = ["serde"] }
crossbeam = "0.8.4"

# Compression algorithms
snap = "1.1.1"
lz4_flex = "0.11.3"
stream-vbyte = "0.4.1"
log = "0.4"
flume = "0.11.0"
bytes = "1.6.0"
core_affinity = "0.8.1"
serde = { version = "1.0.199", features = ["derive", "serde_derive"] }
serde_yml = "0.0.9"
bzip2 = { version = "0.4.4", features = ["static"] }
fqcomp = { git = "https://github.com/Minhyeok01/FCLQC" }
vers-vecs = "1.3.1"
rans = "0.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Comment flate2 out for testing wasm build
flate2 = {version = "1.0.28", features = ["zlib-ng"], default-features = false}
zstd = { version="0.13", default-features = false, features=["arrays", "zdict_builder", "experimental"] }
liblzma = { version = "0.3.1", features = ["static"] }
brotli = {version = "6.0.0", features = ["simd"] }

# TODO: Possible standard zstd crate has wasm support now?!
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
flate2 = { version = "1.0.28", features = ["rust_backend"], default-features = true }
zstd = { version="0.13", default-features = false, features=["wasm", "arrays", "zdict_builder", "experimental"] }
liblzma = { version = "0.3.1", features = ["static", "wasm"] }
brotli = "6.0.0"

[features]
default = []
async = []
