[package]
name = "filehandlemanager"
version = "0.0.1"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tokio file handle manager"
repository = "https://github.com/jguhlin/sfasta"

[lib]
crate-type = ["rlib"]
name = "libfilehandlemanager"
path = "src/lib.rs"

[dependencies]
log = "0.4"
tokio = { version = "1.37", default-features = false, features = ["fs", "io-util"] }
crossbeam = "0.8.4"
dashmap = { version = "5.5.3", features = ["inline"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["fs"] }