[package]
name = "fractaltree"
version = "0.0.1"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fractal Tree for libsfasta"
repository = "https://github.com/jguhlin/sfasta"

[lib]
crate-type = ["rlib", "cdylib"]
name = "libfractaltree"
path = "src/lib.rs"

[[bench]]
name = "tree"
harness = false

[[bench]]
name ="integer_compression"
harness = false

[dependencies]
pulp = "0.18.8"
bumpalo = {version = "3.15.4", features = ["boxed", "collections"]}
sorted-vec = "0.8.3"
bincode = "2.0.0-rc.3"
compression = { path = "../compression" }
filehandlemanager = { path = "../filehandlemanager", optional = true }
binout = "0.2.1"
log = "0.4"
rayon = "1.10.0"
num = { version = "0.4.1", features = ["alloc", "libm"] }
zstd = { version="0.13", default-features = false, features=["arrays", "zdict_builder", "experimental"] }
tokio = { version = "1.37", default-features = false, features = ["fs", "io-util", "sync"], optional = true }
futures = { version = "0.3.30", optional = true }
async-gen = "0.2.3"
tokio-stream = "0.1.15"
async-stream = "0.3.5"
futures-core = "0.3.30"
futures-util = "0.3.30"
crossbeam = "0.8.4"
dashmap = { version = "5.5.3", features = ["inline"] }
crossbeam-skiplist = "0.1.3"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
human-size = "0.4.3"
bitpacking = "0.9.2"
wide = "0.7.16"
pco = "0.2.3"
stream-vbyte = "0.4.1"

[features]
default = ["async"]
async = ["tokio", "futures", "compression/async", "filehandlemanager"]
