[package]
name = "libsfasta"
version = "0.3.4"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Better FASTA sequence compression and querying"
repository = "https://github.com/jguhlin/sfasta"
categories = ["science", "command-line-utilities", "filesystem", "compression"]
keywords = ["bioinformatics", "fasta", "compression"]
exclude = [
	"**/*.fasta",
	"libsfasta/test_data/",
	"*.profdata",
	
]

[lib]
crate-type = ["rlib", "cdylib"]
name = "libsfasta"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
rand_core = "0.6.3"
rand_chacha = "0.3.1"
log = "0.4.19"
crossbeam = "0.8.1"
static_assertions = "1.1.0"
bincode = { version = "2.0.0-rc.3" } #, features = ["serde"] }
bytelines = "2.4.0"
simdutf8 = {version = "0.1.4", features = ["aarch64_neon"] }
rayon = "1.7.0"
itertools = "0.11.0"
bitvec = "1.0.1"
env_logger = "0.10.0"
getrandom = { version = "0.2.10", features = ["js"] }
bumpalo = "3.13.0"
# stream-vbyte64 = "0.1.2"

# Hashers
twox-hash = "1.6.3"
 
# Compression algorithms
bitpacking = { version = "0.8.4", features = ["bitpacker8x"] }
snap = "1.0.5"
brotli = "3.3.4"
lz4_flex = "0.11.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
ruzstd = "0.4.0"
flate2 = { version = "1.0.26", features = ["rust_backend"], default-features = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Comment flate2 out for testing wasm build
flate2 = {version = "1.0.24", features = ["zlib-ng"], default-features = false}
zstd = { version="0.12.3", default-features = false, features=["arrays", "zdict_builder", "experimental"] } # { git = "https://github.com/gyscos/zstd-rs", features = [ "experimental" ] }
xz = "0.1.0"
pulp = "0.13.1"
syncmers = "0.1.5"

[dev-dependencies]
criterion = "0.5.1"
humansize = "2.1.3"
generic-array = "0.14.7"
numeric-array = "0.5.2"
num-traits = "0.2.15"
