[package]
name = "libsfasta"
version = "0.3.4"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Better FASTA sequence compression and querying"
repository = "https://github.com/jguhlin/sfasta"
categories = ["science", "command-line-utilities", "filesystem", "compression"]
keywords = ["bioinformatics", "fasta", "compression"]
exclude = [
	"**/*.fasta",
	"libsfasta/test_data/",
	"*.profdata",
]

[lib]
crate-type = ["rlib", "cdylib"]
name = "libsfasta"
path = "src/lib.rs"

[dependencies]
fractaltree = { path = "../fractaltree" }
compression = { path = "../compression"}
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
log = "0.4.21"
env_logger = "0.11.3"
crossbeam = "0.8.4"
static_assertions = "1.1.0"
bincode = { version = "2.0.0-rc.3" } #, features = ["serde"] }
bytelines = { version = "2.5", default-features = false }
simdutf8 = {version = "0.1.4", features = ["aarch64_neon"] }
itertools = "0.12.1"
needletail = "0.5.1"
bumpalo = "3.16"
flume = "0.11.0"

# getrandom = { version = "0.2.10", features = ["js"] }
# bumpalo = "3.13.0"

# Hashers
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
 
# Compression algorithms
snap = "1.1.1"
brotli = "5.0.0"
lz4_flex = "0.11.3"
bytes = "1.6.0"
strum = "0.26.2"
strum_macros = "0.26.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
ruzstd = "0.6.0"
flate2 = { version = "1.0.28", features = ["rust_backend"], default-features = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Comment flate2 out for testing wasm build
flate2 = {version = "1.0.28", features = ["zlib-ng"], default-features = false}
zstd = { version="0.13", default-features = false, features=["arrays", "zdict_builder", "experimental"] }
pulp = "0.18.10"
# syncmers = "0.1.5"

[dev-dependencies]
criterion = "0.5.1"
humansize = "2.1.3"
generic-array = "1.0.0"
numeric-array = "0.5.2"
num-traits = "0.2.18"
