[package]
name = "libsfasta"
version = "0.3.4"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Better FASTA sequence compression and querying"
repository = "https://github.com/jguhlin/sfasta"
categories = ["science", "command-line-utilities", "filesystem", "compression"]
keywords = ["bioinformatics", "fasta", "compression"]
exclude = [
	"**/*.fasta",
	"libsfasta/test_data/",
	"*.profdata",
]

[lib]
crate-type = ["rlib", "cdylib"]
name = "libsfasta"
path = "src/lib.rs"

[dependencies]
fractaltree = { path = "../fractaltree" }
compression = { path = "../compression"}
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
log = "0.4.21"
env_logger = "0.11.3"
crossbeam = "0.8.4"
static_assertions = "1.1.0"
bincode = { version = "2.0.0-rc.3" } #, features = ["serde"] }
bytelines = { version = "2.5", default-features = false }
simdutf8 = {version = "0.1.4", features = ["aarch64_neon"] }
itertools = "0.13"
# needletail = "0.5.1"
needletail = { git = "https://github.com/jguhlin/needletail" }

tokio = { version = "1.37", default-features = false, features = ["rt-multi-thread", "io-util", "macros", "fs"], optional = true }

bumpalo = {version = "3.16", features = ["allocator_api"] }
flume = "0.11.0"

# getrandom = { version = "0.2.10", features = ["js"] }
# bumpalo = "3.13.0"

# Hashers
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
bytes = "1.6.0"
strum = "0.26.2"
strum_macros = "0.26.2"
core_affinity = "0.8.1"
humansize = "2.1.3"
serde_yml = "0.0.7"
serde = { version = "1.0.199", features = ["derive", "serde_derive"] }
pulp = "0.18.10"
futures = "0.3.30"
tracing = "0.1"
tracing-subscriber = "0.3"
async-gen = "0.2.3"
async-stream = "0.3.5"
tokio-stream = "0.1.15"
hashbrown = "0.14.5"
crossbeam-skiplist = "0.1.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
flate2 = { version = "1.0.28", features = ["rust_backend"], default-features = true }
zstd = { version = "0.13.1", features = ["wasm"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flate2 = {version = "1.0.28", features = ["zlib-ng"], default-features = false}
zstd = { version = "0.13.1" }

[dev-dependencies]
criterion = "0.5.1"
generic-array = "1.0.0"
numeric-array = "0.5.2"
num-traits = "0.2.18"

[features]
default = []
async = ["dep:tokio", "fractaltree/async", "compression/async"]
