[package]
name = "pysfasta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sfasta"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
libsfasta = { path = "../libsfasta" }
tokio = { version = "1", features = ["full"] }
bytes = "1.6.0"
pyo3-polars = "0.15.0"
tokio-stream = "0.1.15"
polars = {version = "0.41.3", features = ["rows", "dtype-struct"]}
log = "0.4.22"
env_logger = "0.11.3"
futures = "0.3.30"
