[package]
name = "sfasta"
version = "0.3.5"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Better FASTA sequence compression and querying"
repository = "https://github.com/jguhlin/sfasta"
categories = ["science", "command-line-utilities", "filesystem", "compression"]
keywords = ["bioinformatics", "fasta", "compression"]
exclude = [
	"**/*.fasta",
	"libsfasta/test_data/",
	"*.profdata",
	
]

[[bin]]
name = "sfa"
path = "src/main.rs"

[dependencies]
libsfasta = { path = "../libsfasta" }
# libsfasta = "0.3.4"
crossbeam = "0.8.2"
sigpipe = "0.1.3"
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
log = "0.4.21"
simdutf8 = "0.1.4"
git-version = "0.3.5" # TODO: Print this out in the library in a version call
env_logger = "0.11.3"
bitpacking = { version = "0.9.2", features = ["bitpacker8x"] }
indicatif = "0.17.5"

# Compression stuff:
flate2 = {version = "1.0.28", features = ["zlib-ng"], default-features = false}
snap = "1.1.1"
brotli = "4.0.0"
lz4_flex = "0.11.3"


# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = { version = "0.5.4", optional = true}

# When not windows, enable mimalloc
[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = { version = "0.1.39", default-features = false, optional = true}


[dependencies.clap]
version = "4.3.19"
features = [ "suggestions", "derive", "cargo", "color", "wrap_help"]

[features]
# default = ["lz4", "zstd", "xz", "zlib", "snap", "brotli", "bitpacking"]
default = []
#default = ["mimalloc"]
#mimalloc = ["dep:mimalloc"]
#jemalloc = ["dep:tikv-jemallocator"]
nightly = []