[package]
name = "sfasta"
version = "0.3.5"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Better FASTA sequence compression and querying"
repository = "https://github.com/jguhlin/sfasta"
categories = ["science", "command-line-utilities", "filesystem", "compression"]
keywords = ["bioinformatics", "fasta", "compression"]
exclude = [
	"**/*.fasta",
	"libsfasta/test_data/",
	"*.profdata",
]

[[bin]]
name = "sfa"
path = "src/main.rs"

[dependencies]
libsfasta = { path = "../libsfasta" }
fractaltree = { path = "../fractaltree" }
compression = { path = "../compression"}

crossbeam = "0.8.4"
sigpipe = "0.1.3"
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
log = "0.4.21"
simdutf8 = "0.1.4"
git-version = "0.3.9" # TODO: Print this out in the library in a version call
env_logger = "0.11.3"
indicatif = "0.17.8"

# Compression stuff:
flate2 = {version = "1.0.28", features = ["zlib-ng"], default-features = false}
snap = "1.1.1"
ratatui = "0.27"
page_size = "0.6.0"
serde = "1.0"
serde_yml = "0.0.10"
xxhash-rust = { version = "0.8.10", features = ["xxh3"], optional = true}
tokio = { version = "1.37.0", features = ["full", "tracing"], optional = true }
bytes = "1.6.0"
tokio-stream = "0.1.15"

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = { version = "0.5.4", optional = true}

# When not windows, enable mimalloc
# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# mimalloc = { version = "0.1.39", default-features = false, optional = true}

# Unix only
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[dependencies.clap]
version = "4.5"
features = [ "suggestions", "derive", "cargo", "color", "wrap_help"]

[features]
default = ["viewer", "async"] #, "faidx-all"]
async = ["tokio", "libsfasta/async"]
viewer = []
nightly = []
faidx-all = ["xxhash-rust"]
